--- a/packages/SystemUI/res/values-et/strings.xml
+++ b/packages/SystemUI/res/values-et/strings.xml
@@ -165,7 +165,7 @@
     <skip />
     <string name="quick_settings_ime_label" msgid="7073463064369468429">"Sisestusmeetod"</string>
     <string name="quick_settings_location_label" msgid="3292451598267467545">"Kasutatav asukoht"</string>
-    <string name="quick_settings_media_device_label" msgid="1302906836372603762">"Meediumiseade"</string>
+    <string name="quick_settings_media_device_label" msgid="1302906836372603762">"Meediaseade"</string>
     <string name="quick_settings_rssi_label" msgid="7725671335550695589">"RSSI"</string>
     <string name="quick_settings_rssi_emergency_only" msgid="2713774041672886750">"Ainult hädaabikõned"</string>
     <string name="quick_settings_settings_label" msgid="5326556592578065401">"Seaded"</string>
@@ -173,13 +173,13 @@
     <string name="quick_settings_user_label" msgid="5238995632130897840">"Mina"</string>
     <string name="quick_settings_wifi_label" msgid="4393429107095001520">"WiFi"</string>
     <string name="quick_settings_wifi_no_network" msgid="2221993077220856376">"Võrku pole"</string>
-    <string name="quick_settings_wifi_display_label" msgid="6653501376641018614">"WiFi-kuva"</string>
-    <string name="quick_settings_wifi_display_no_connection_label" msgid="6255615315258869136">"WiFi-kuva ühendus puudub"</string>
+    <string name="quick_settings_wifi_display_label" msgid="6653501376641018614">"WiFi-ekraan"</string>
+    <string name="quick_settings_wifi_display_no_connection_label" msgid="6255615315258869136">"WiFi-ekraani ühendus puudub"</string>
     <string name="quick_settings_brightness_dialog_title" msgid="8599674057673605368">"Heledus"</string>
     <string name="quick_settings_brightness_dialog_auto_brightness_label" msgid="5064982743784071218">"AUTOMAATNE"</string>
     <string name="wifi_display_scan" msgid="8453135922233546097">"Skannimine"</string>
     <string name="wifi_display_disconnect" msgid="5450214362789378584">"Katkesta ühendus"</string>
-    <string name="wifi_display_dialog_title" msgid="2817993038700218900">"WiFi-kuva"</string>
+    <string name="wifi_display_dialog_title" msgid="2817993038700218900">"WiFi-ekraan"</string>
     <string name="wifi_display_state_available" msgid="980373281442607096">"Saadaval"</string>
     <string name="wifi_display_state_connecting" msgid="1677010908036241940">"Ühendamine"</string>
     <string name="wifi_display_state_connected" msgid="9154375061719151149">"Ühendatud"</string>
